--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,14 +78,14 @@
     text-decoration: none;
     font-size: 1.8rem;
     text-transform: uppercase;
-    color: var(--ash-grey);
+    color: var(--outer-space);
     padding-bottom: 0.5rem;
     /* background-color: black; */
 
   }
   
   .nav-link:hover {
-    border-bottom: 0.2rem solid var(--ash-grey);
+    border-bottom: 0.2rem solid var(--light-french-beige);
     box-shadow: 0 0 1rem 0.5rem var(--light-french-beige);
     background-color: var(--light-french-beige);
   }
@@ -99,7 +99,7 @@
     font-size: 1.4rem;
     padding: 2rem 0;
     text-align: center;
-    color: var(--ash-grey);
+    color: var(--outer-space);
     letter-spacing: 0.4rem;
   }
   
@@ -113,7 +113,7 @@
   
   .contact-link {
     text-decoration: none;
-    color: var(--ash-grey);
+    color: var(--outer-space);
     margin: 0.5rem 0;
   }
   
@@ -126,34 +126,40 @@
   /* end of footer styles */
   
   .main {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 20rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0 20rem;
+      
+      
     /* position: relative; */
   }
   
   /* content section styles */
   
   .content-section {
+      /* height: 500px; */
+      height: 100%;
+      width: 100%;
+      /* width: 1100px;; */
+
     letter-spacing: 0.6rem;
     padding: 2rem 1rem;
     text-align: center;
-    color: var(--ash-grey);
+    color: var(--outer-space);
     box-shadow: 0rem 0rem 0.7rem 0.7rem rgba(var(--ash-grey-rgb), 0.3);
     /* position: relative; */
     background-image: linear-gradient(
-        to bottom,
+        to right,
         rgba(var(--ash-grey-rgb), 0.7),
-        rgba(var(--ash-grey-rgb), 0.4)
+        rgba(var(--ash-grey-rgb), 0.7)
       ),
-      url("/images/egghead.jpg");
-    background-position: 0px 0px;
+      url("/images/homer-take-quiz.jpeg");
+      /* width: 600px; */
+      justify-content: center;
+    background-position:  -100px;
     background-repeat: repeat-x;
-    animation: animatedBackground 10s linear infinite alternate;
-    
-    
+    /* animation: animatedBackground 30s linear infinite alternate; */
   }
   
   .content-section-title {
@@ -197,6 +203,7 @@
   /* start of question styles */
   
   .question-container {
+      
     padding: 0;
     background: transparent;
     background-image: linear-gradient(
@@ -204,10 +211,12 @@
         rgba(var(--ash-grey-rgb), 0.7),
         rgba(var(--ash-grey-rgb), 0.4)
       ),
+      /* url("/images/simpsons-take-quiz-dinner.jpeg"); */
       url("/images/simpsonsclassic.jpg");
+      
     background-position: 0px 0px;
     background-repeat: repeat-x;
-    animation: animatedBackground 10s linear infinite alternate;
+    /* animation: animatedBackground 10s linear infinite alternate; */
   }
   
   .question-container .content-section-title {
@@ -249,7 +258,7 @@
   
   .title {
     text-align: center;
-    color: var(--ash-grey);
+    color: var(--outer-space);
     text-transform: uppercase;
     letter-spacing: 0.4rem;
   }
