--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@
   /* start of footer styles */
   
   .footer {
-    background-color: var(--metallic-yellow);
+    background-color: var(--maya-blue);
     font-size: 1.4rem;
     padding: 2rem 0;
     text-align: center;
@@ -110,6 +110,7 @@
     align-items: center;
     justify-content: center;
     margin: 1rem 0;
+    flex:2;
   }
   
   .contact-link {
@@ -128,11 +129,12 @@
   /* end of footer styles */
   
   .main {
+    flex: 2;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      margin: 0 20rem;
-      height: 50%;
+      margin: 0 10rem;
+      /* height: 50%; */
       
       
     /* position: relative; */
@@ -142,8 +144,8 @@
   
   .content-section {
       /* height: 500px; */
-      height: 100%;
-      width: 100%;
+      /* height: 100%;
+      width: 100%; */
       /* width: 1100px;; */
 
     letter-spacing: 0.6rem;
@@ -224,7 +226,8 @@
   /* start of question styles */
   
   .question-container {
-    height: auto;  
+    /* height: auto;   */
+    margin:5rem;
     padding: 0;
     background: transparent;
     background-image: linear-gradient(
@@ -243,7 +246,8 @@
   .question-container .question {
     background-color: rgba(var(--light-french-beige), 1);
     /* color: var(--mid) */
-    margin-top: 0;
+    margin-top: 10rem;
+    margin-bottom: 5rem;
     font-size: 3rem;
     font-weight: bold; 
   }
@@ -256,7 +260,7 @@
   .question-list {
     list-style: none;
     text-align: left;
-    /* margin: 3rem 2rem; */
+    margin: 3rem 2rem;
     padding: 2rem;
     border-radius: 0.4rem;
     background-color: rgba(var(--metallic-yellow-rgb), 0.8);
