--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,6 +305,7 @@
     text-align: center;
     font-size:4rem;
     line-height: 1rem;
+    /* display:block; */
   }
   
   .timer-text {
@@ -331,6 +332,8 @@
   .high-score-form-section {
     background-color: var(--maya-blue);
     margin: 2rem 0;
+    display: flex;
+    flex-direction: column;
   }
   
   .title {
@@ -347,6 +350,8 @@
     justify-content: center;
     align-items: center;
     padding: 2rem;
+    flex-direction: column;
+
   }
   
   .form-input {
