--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,7 @@
 
   .btn-2 {
     padding: 1.5rem 2rem;
+    margin-top: 1rem;
     font-size: 1.6rem;
     font-weight: 600;
     border: none;
@@ -334,6 +335,22 @@
     margin: 2rem 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin:0;
+  }
+ 
+  .high-score-form-section h1{
+      margin-bottom: 0;
+  }
+
+  .high-score-form-section h2{
+    margin-bottom: 0;
+} 
+
+  #game-over-image{
+      height: 80%;
+      width: auto;
+
   }
   
   .title {
@@ -387,6 +404,12 @@
         flex-wrap: wrap;
 
       }
+
+      #game-over-image{
+        height: 40%;
+        width: 40%;
+  
+    }
   }
   
   @keyframes animatedBackground {
