--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,7 @@
     background-color: var(--maya-blue);
     font-size: 1.4rem;
     padding: 2rem 0;
+    margin-top:2rem;
     text-align: center;
     color: var(--outer-space);
     letter-spacing: 0.4rem;
@@ -205,7 +206,7 @@
 
   .btn-2 {
     padding: 1.5rem 2rem;
-    margin-top: 1rem;
+    margin-bottom: 2rem;
     font-size: 1.6rem;
     font-weight: 600;
     border: none;
@@ -373,7 +374,8 @@
   
   .form-input {
     padding: 1rem 2rem;
-    width: 100%;
+    /* width: 100%; */
+    width: 40vw;
     border: none;
     border-radius: 0.4rem;
   }
